--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://player.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://beerbottle.png")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -27,8 +27,8 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://world.tscn", "res://player.tscn", "res://toad.tscn", "res://big_toad.tscn", "res://coin.tscn", "res://coin_gui.tscn", "res://underworld.tscn", "res://start.tscn", "res://gameover.tscn")
-current_scene="res://gameover.tscn"
+open_scenes=PackedStringArray("res://world.tscn", "res://player.tscn", "res://toad.tscn", "res://big_toad.tscn", "res://coin.tscn", "res://coin_gui.tscn", "res://underworld.tscn", "res://start.tscn", "res://gameover.tscn", "res://questionblock.tscn", "res://character_body_2d.tscn")
+current_scene="res://character_body_2d.tscn"
 center_split_offset=-234
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -36,8 +36,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://big_toad.gd", "res://coin.gd", "res://coin_gui.gd", "res://gameover.gd", "res://global.gd", "res://player.gd", "res://start.gd", "res://toad.gd", "res://underworld.gd", "res://world.gd"]
-selected_script="res://player.gd"
+open_scripts=["res://big_toad.gd", "res://coin.gd", "res://coin_gui.gd", "res://gameover.gd", "res://global.gd", "res://player.gd", "res://questionblock.gd", "res://start.gd", "res://toad.gd", "res://underworld.gd", "res://world.gd"]
+selected_script="res://global.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
