--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -28,7 +28,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://world.tscn", "res://player.tscn", "res://toad.tscn", "res://coin.tscn", "res://underworld.tscn", "res://start.tscn", "res://gameover.tscn", "res://questionblock.tscn", "res://beer.tscn", "res://hard_level.tscn", "res://thong_power_up.tscn", "res://thong.tscn")
-current_scene="res://player.tscn"
+current_scene="res://thong.tscn"
 center_split_offset=-242
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -37,7 +37,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://beer.gd", "res://big_toad.gd", "res://coin.gd", "res://coin_gui.gd", "res://gameover.gd", "res://global.gd", "res://player.gd", "res://questionblock.gd", "res://start.gd", "res://thong.gd", "res://thong_power_up.gd", "res://toad.gd", "res://underworld.gd", "res://world.gd"]
-selected_script="res://player.gd"
+selected_script="res://thong.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
