--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://ALARM Alert Ringer Ascend 01.ogg")
+dock_filesystem_selected_paths=PackedStringArray("res://IMG_4260-removebg-preview.png")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -28,16 +28,16 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://world.tscn", "res://player.tscn", "res://toad.tscn", "res://coin.tscn", "res://underworld.tscn", "res://start.tscn", "res://gameover.tscn", "res://questionblock.tscn", "res://beer.tscn", "res://hard_level.tscn", "res://thong_power_up.tscn", "res://thong.tscn", "res://win.tscn")
-current_scene="res://world.tscn"
+current_scene="res://questionblock.tscn"
 center_split_offset=-286
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
-selected_bottom_panel_item=1
+selected_main_editor_idx=0
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://beer.gd", "res://big_toad.gd", "res://coin.gd", "res://coin_gui.gd", "res://gameover.gd", "res://global.gd", "res://hard_level.gd", "res://player.gd", "res://questionblock.gd", "res://start.gd", "res://thong.gd", "res://thong_power_up.gd", "res://toad.gd", "res://underworld.gd", "res://win.gd", "res://world.gd"]
-selected_script="res://hard_level.gd"
+selected_script="res://questionblock.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
