--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -28,8 +28,8 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://world.tscn", "res://player.tscn", "res://toad.tscn", "res://coin.tscn", "res://underworld.tscn", "res://start.tscn", "res://gameover.tscn", "res://questionblock.tscn", "res://beer.tscn", "res://hard_level.tscn", "res://thong_power_up.tscn", "res://thong.tscn", "res://win.tscn")
-current_scene="res://questionblock.tscn"
-center_split_offset=-286
+current_scene="res://underworld.tscn"
+center_split_offset=-234
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
 selected_bottom_panel_item=0
@@ -37,7 +37,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://beer.gd", "res://big_toad.gd", "res://coin.gd", "res://coin_gui.gd", "res://gameover.gd", "res://global.gd", "res://hard_level.gd", "res://player.gd", "res://questionblock.gd", "res://start.gd", "res://thong.gd", "res://thong_power_up.gd", "res://toad.gd", "res://underworld.gd", "res://win.gd", "res://world.gd"]
-selected_script="res://questionblock.gd"
+selected_script="res://underworld.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
